Salesforce/main/default/main/default/objects/Analisis_de_Datos__c/fields/Cantidad_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Contrato__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>