Salesforce/main/default/main/default/objects/Analisis_de_Datos__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Analisis de Datos</relationshipLabel>
    <relationshipName>Analisis_de_Datos</relationshipName>
    <type>Lookup</type>
</CustomField>