Salesforce/main/default/main/default/objects/Analisis_de_Datos__c/fields/PropietarioOpp__c.field-meta.xml
<CustomField>
    <fullName>PropietarioOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PropietarioOpp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Analisis_de_Datos</relationshipName>
    <type>Lookup</type>
</CustomField>