Salesforce/main/default/main/default/objects/Analisis_de_Datos__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>13/14</fullName>
            </value>
            <value>
                <fullName>14/15</fullName>
            </value>
            <value>
                <fullName>15/16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>