Salesforce/main/default/main/default/objects/Analisis_de_Datos__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedad</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Analisis de Datos</relationshipLabel>
    <relationshipName>Analisis_de_Datos</relationshipName>
    <type>Lookup</type>
</CustomField>